--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "description": "Backend for CoinFlip Telegram Mini App",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "body-parser": "^1.20.2"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+  "engines": {
+    "node": ">=18.0.0"
   },
   "keywords": ["telegram", "miniapp", "coinflip", "backend"],
   "author": "Your Name",
